syntax = "proto3";

package sonarData;  // Optional: Replace with your desired package name

// To include new data, add it to this code and run "protoc --c_out=. sonarData.proto" 
//      from the same folder as the data.proto is in
// For python: protoc --python_out=. sonarData.proto





// --------------------- Ungeoreferenced point cloud and telemetry data ---------------------
message Ungeoref_And_Telemetry{
    sonarData sonar = 1;
    telemetryData_position position = 2;
    telemetryData_pose pose = 3;
    telemetryData_heading heading = 4;
    telemetryData_depth depth = 5;
    telemetryData_altitude altitude = 6;
}

message sonarData {
    repeated float pointX = 1;
    repeated float pointY = 2;
    repeated int32 beamIdx = 3;
    repeated uint32 quality = 4;
    repeated float intensity = 5;
}

message telemetryData_position {
    float latitude = 1;
    float longitude = 2;
    int32 position_timestep = 3;
}

message telemetryData_pose {
    float roll = 1;
    float pitch = 2;
    int32 pose_timestep = 3;
}

message telemetryData_heading {
    float heading = 1;
    int32 heading_timestep = 2;
}

message telemetryData_depth {
    float depth = 1;
    int32 depth_timestep = 2;
}

message telemetryData_altitude {
    float altitude = 1;
    int32 altitude_timestep = 2;
}



// --------------- Poses before interpolation ("raw poses") for testing --------------------------
message TestData_RawPoses {
    raw_rollAndpitch raw_rollAndpitch = 1;
    raw_heading raw_heading = 2; 
}

message raw_rollAndpitch {
    float raw_roll = 1;
    float raw_pitch = 2;
    int32 raw_pose_timestep = 3;
}

message raw_heading {
    float raw_heading = 1;
    int32 raw_heading_timestep = 2;
}



